# scout

./: .editorconfig  .env.example  LICENSE  README.md  ROADMAP.md  Taskfile.yml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
apps/forecast/: .gitignore  Dockerfile  Taskfile.yml  pyproject.toml
apps/forecast/src/: api.py  bases.py  build.py  fetch.py  main.py  models.py  prediction_data.py  train_data.py  utils.py
apps/forecast/src/feats/: __init__.py  fatigue_factor.py  feature.py  mif.py  skill.py  time_factor.py
apps/scraper/: .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  pyproject.toml
apps/scraper/src/: app.py  config.py  db.py  main.py  prod.py
apps/scraper/src/api/: __init__.py  dto.py  routes.py
apps/scraper/src/models/: __init__.py  matches.py  players.py  players_stats.py  stadiums.py  team_stats.py  teams.py
apps/scraper/src/scraper/: __init__.py  base_maps.py  bases.py  scraper.py
apps/scraper/src/tasks/: __init__.py  fixtures.py  handle_players.py  initial.py  scheduler.py
apps/web/: Dockerfile  README.md  package-lock.json  package.json
apps/web/public/: matches.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/matches/: page.tsx
apps/web/src/app/matches/[id]/: page.tsx
apps/web/src/app/model/: page.tsx
apps/web/src/app/pred-table/: page.tsx
apps/web/src/app/tables/: page.tsx
apps/web/src/components/fixture-card/: index.tsx
apps/web/src/components/header/: index.tsx
apps/web/src/utils/: fetch.ts  predict.ts  standing.ts
