[tool.poetry]
name = "forecast"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.6.0"
numpy = "^2.2.1"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
aiohttp = "^3.11.11"
asyncio = "^3.4.3"
scipy = "^1.15.0"
seaborn = "^0.13.2"
lightgbm = "^4.5.0"
scikit-optimize = "^0.10.2"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
