[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Ali Furkan"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"
dataclasses-json = "^0.6.7"
apscheduler = "^3.11.0"
pandas = "^2.2.3"
gunicorn = "^23.0.0"
aiohttp = "^3.11.11"
asyncio = "^3.4.3"
marshmallow = "^3.23.3"
marshmallow-sqlalchemy = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
